<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">5v5Quran</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="setAlrmBtnString">Set Alarm</string>
    <string name="freqSpinnerString">Snooze Frequency</string>
    <string name="setTimeString">Set Time</string>
    <string name="alrmPgHeadString">ALARM</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="usernameHint">Email</string>
    <string name="register">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_settings">Settings</string>

</resources>
