<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <Spinner
        android:id="@+id/freqSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setAlrmBtn"
        android:layout_alignLeft="@+id/freqSpinnerLabel"
        android:layout_marginBottom="21dp" />

    <Button
        android:id="@+id/setAlrmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/freqSpinner"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp"
        android:text="@string/setAlrmBtnString"
        android:onClick="setAlarm" />

    <TextView
        android:id="@+id/freqSpinnerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/freqSpinner"
        android:layout_alignLeft="@+id/timePicker1"
        android:text="@string/freqSpinnerString" />

    <TimePicker
        android:id="@+id/timePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/freqSpinnerLabel"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="14dp" />

    <TextView
        android:id="@+id/setTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timePicker1"
        android:layout_alignLeft="@+id/timePicker1"
        android:layout_marginBottom="16dp"
        android:text="@string/setTimeString" />

    <TextView
        android:id="@+id/alrmPgHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/setTimeLabel"
        android:text="@string/alrmPgHeadString"
        android:textAppearance="?android:attr/textAppearanceLarge" />
		
</RelativeLayout>